syntax = "proto3";
package skypie;

import "assignment.proto";

message Scheme {
    repeated string object_stores = 1;
    repeated Assignment app_assignments = 2;
}
